<resources>
    <string name="app_name">TodoK</string>
    <string name="login">Login</string>
    <string name="log_in">Log in</string>
    <string name="sign_in">Sign in</string>
    <string name="lastname">Lastname</string>
    <string name="name">Name</string>
    <string name="password_confirmation">Password confirmation</string>
    <string name="password">Password</string>
    <string name="mail_example">test@gmail.fr</string>
    <string name="email">Email</string>
    <string name="logout">Logout</string>
</resources>