<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/login_base_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="50dp"
    android:paddingRight="50dp"
    android:layout_gravity="center"
    android:gravity="center"
    android:orientation="vertical"
    >

    <EditText
        android:id="@+id/editTextTextEmailAddress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textEmailAddress"
        tools:layout_editor_absoluteX="100dp"
        tools:layout_editor_absoluteY="251dp"
        android:layout_margin="20dp"
        android:hint="@string/email"
        />

    <EditText
        android:id="@+id/editTextTextPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPassword"
        tools:layout_editor_absoluteX="98dp"
        tools:layout_editor_absoluteY="342dp"
        android:layout_margin="20dp"
        android:hint="@string/password"
        />

    <Button
        android:id="@+id/connection_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/login"
        tools:layout_editor_absoluteX="156dp"
        tools:layout_editor_absoluteY="446dp"
        android:layout_margin="20dp"/>
</LinearLayout>